# AndroidNativeImageProcessing

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/AndroidOpenCvOpenClNativeExample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/AndroidOpenCvOpenClNativeExample/: MainActivity.java  NAFFD.java  ttttmmmmppp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/AndroidOpenCvOpenClNativeExample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
